<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SRSYS</string>
    <string name="action_settings">Settings</string>
    <string name="student_records_system">Student Records System</string>
    <string name="title_activity_students">SRSYS: Students</string>
    <string name="title_activity_courses">SRSYS: Courses</string>
    <string name="title_activity_student_courses">SRSYS: Student Course History</string>
    <string name="title_activity_course_students">SRSYS: Course Registrations</string>
    <string name="students">Students</string>
    <string name="courses">Courses</string>
    <string name="registrations">Registrations</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="course_id">Course ID</string>
    <string name="gpa">GPA</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="choose_category_text">Please choose your category</string>
    <string name="professor_button">I\'m a Professor</string>
    <string name="employee_button">I\'m an Employee</string>
    <string name="student_button">I\'m a student</string>
    <string name="professor_prompt">Hi. What would you like to do?</string>
    <string name="request_books_button">Request books</string>
    <string name="check_stock_button">Check stock</string>
    <string name="check_status_button">Check status</string>
    <string name="create_list_button">Create book list</string>
    <string name="request_prompt">Please fill in the following criteria:</string>
    <string name="book_name_text_field">Book name</string>
    <string name="author_text_field">Author</string>
    <string name="book_course_text_field">Course</string>
    <string name="book_category_text_field">Category</string>
    <string name="quantity_text_field">Quantity</string>
    <string name="submit_request_button">Submit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_text_view">Book Inventory System</string>
    <string name="category_prompt_text_view">Please Choose your category</string>
    <string name="title_activity_professor">ProfessorActivity</string>
    <string name="title_activity_request_books">RequestBooksActivity</string>
    <string name="title_activity_check_stock">CheckStockActivity</string>
    <string name="title_activity_check_status">CheckStatusActivity</string>
    <string name="title_activity_create_book_list">CreateBookListActivity</string>
    <string name="add_book_button">Add</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="title_activity_employee">EmployeeActivity</string>
    <string name="update_inventory_button">Update Inventory</string>
    <string name="order_from_publisher_button">Order from publisher</string>
    <string name="check_orders_status_button">Check status of orders</string>
    <string name="check_message_button">Check message</string>
    <string name="title_activity_update_inventory">UpdateInventoryActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="order_button">Place order</string>
    <string name="title_activity_check_order_status">CheckOrderStatusActivity</string>
    <string name="title_activity_check_message">CheckMessageActivity</string>
    <string name="repond_message_text_field">Enter response</string>
    <string name="send_message_button">Send</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="browse_inventory_button">Browse inventory</string>
    <string name="preview_books_text_view">Preview books</string>
    <string name="view_course_list_button">View course list of books</string>
    <string name="ask_question_button">Ask question</string>
    <string name="title_activity_browse_inventory">BrowseInventoryActivity</string>
    <string name="title_activity_preview_books">PreviewBooksActivity</string>
    <string name="title_activity_course_list">CourseListActivity</string>
    <string name="title_activity_ask_questions">AskQuestionsActivity</string>
    <string name="ask_question_text_field">Enter question</string>
    <string name="ask_question_text_field_2">Enter question</string>
    <string name="request_books_error_message">Please make sure you provide all the information</string>
	<string name="request_books_error_title">Oops!</string>
    
</resources>
