<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comp3350.srsys.MainActivity" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="33dp"
        android:text="@string/title_text_view"
        android:textSize="0.155in" />

    <TextView
        android:id="@+id/categoryPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123dp"
        android:text="@string/category_prompt_text_view"
        android:textSize="0.25in" />

    <Button
        android:id="@+id/professorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoryPrompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="@string/professor_button" />

    <Button
        android:id="@+id/employeeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/professorButton"
        android:layout_centerVertical="true"
        android:text="@string/employee_button" />

    <Button
        android:id="@+id/studentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/employeeButton"
        android:layout_below="@+id/employeeButton"
        android:layout_marginTop="56dp"
        android:text="@string/student_button" />

</RelativeLayout>
