<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comp3350.srsys.StudentActivity" >

    <TextView
        android:id="@+id/studentPromptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:text="@string/professor_prompt"
        android:textSize="0.25in" />

    <Button
        android:id="@+id/browseInventoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/studentPromptTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:text="@string/browse_inventory_button" />

    <Button
        android:id="@+id/previewBooksButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/browseInventoryButton"
        android:layout_below="@+id/browseInventoryButton"
        android:layout_marginTop="51dp"
        android:text="@string/preview_books_text_view" />

    <Button
        android:id="@+id/viewCourseListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/previewBooksButton"
        android:layout_below="@+id/previewBooksButton"
        android:layout_marginTop="53dp"
        android:text="@string/view_course_list_button" />

    <Button
        android:id="@+id/askQuestionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewCourseListButton"
        android:layout_below="@+id/viewCourseListButton"
        android:layout_marginTop="53dp"
        android:text="@string/ask_question_button" />

</RelativeLayout>
