<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comp3350.srsys.CreateBookListActivity" >

    <ListView
        android:id="@+id/createBookListListView"
        android:layout_width="match_parent"
        android:layout_height="1.5in"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >
    </ListView>

    <EditText
        android:id="@+id/cbUsingNameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createBookListListView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/book_name_text_field" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/cbUsingAuthorTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbUsingNameTextField"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/author_text_field" />

    <Button
        android:id="@+id/addBookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbUsingAuthorTextField"
        android:layout_below="@+id/cbUsingAuthorTextField"
        android:layout_marginTop="19dp"
        android:text="@string/add_book_button" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addBookButton"
        android:layout_alignBottom="@+id/addBookButton"
        android:layout_centerHorizontal="true"
        android:text="@string/update_button" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/updateButton"
        android:layout_alignBottom="@+id/updateButton"
        android:layout_alignRight="@+id/cbUsingAuthorTextField"
        android:text="@string/delete_button" />

</RelativeLayout>
